clases nuevas, ui fix

--- a/templates/roomsearch.html
+++ b/templates/roomsearch.html
@@ -81,6 +81,11 @@
             <span>USD</span>
             <ion-icon name="chevron-forward-outline"></ion-icon>
         </div>
+        <select class="input-default" id="habitacion" name="habitacion" required>
+            <option value="simple">Simple</option>
+            <option value="doble">Doble</option>
+            <option value="compartida">Compartida</option>
+        </select>
         <div class="room-card">
             <div class="room-card-section1">
                 <img src="static/assets/Normal-suite.jpg" alt="" srcset="">
