--- a/templates/roomsearch.html
+++ b/templates/roomsearch.html
@@ -86,36 +86,6 @@
             <option value="doble">Doble</option>
             <option value="compartida">Compartida</option>
         </select>
-        <div class="room-card">
-            <div class="room-card-section1">
-                <img src="static/assets/Normal-suite.jpg" alt="" srcset="">
-            </div>
-            <div class="room-card-section2">
-                <h1>Normal Suite</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus posuere odio id libero
-                    ullamcorper, vitae aliquam ex vulputate. Nunc eros ante, feugiat nec ligula quis, ultrices varius
-                    velit.</p>
-                <button class="button-default">Reservar</button>
-            </div>
-            <div class="room-card-section3">
-                <span>$ 10.000,00</span>
-            </div>
-        </div>
-        <div class="room-card">
-            <div class="room-card-section1">
-                <img src="static/assets/Junior-suite.jpg" alt="" srcset="">
-            </div>
-            <div class="room-card-section2">
-                <h1>Junior Suite</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus posuere odio id libero
-                    ullamcorper, vitae aliquam ex vulputate. Nunc eros ante, feugiat nec ligula quis, ultrices varius
-                    velit.</p>
-                <button class="button-default">Reservar</button>
-            </div>
-            <div class="room-card-section3">
-                <span>$ 10.000,00</span>
-            </div>
-        </div>
     </div>
     <footer>
         <div class="footer-columns">
@@ -159,6 +129,7 @@
         </form>
     </dialog>
     <script src="static/js/index.js"></script>
+    <script type="module" src="static/js/search.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
