--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -92,7 +92,7 @@
                 <button class="button-default-outline">Reserva ya!</button>
             </div>
             <div class="div2">
-                <img src="static/assets/acacias-696x459.png" class="img-res" alt="" srcset="">
+                <img src="../static/assets/acacias-696x459.png" class="img-res" alt="" srcset="">
             </div>
         </div>
         <div style="text-align: center;">
@@ -101,32 +101,32 @@
                 disfrutar de tus vacaciones o viajes. </p>
             <div class="section-column-container">
                 <div class="section-column">
-                    <img src="static/assets/estacionamiento.png" alt="" srcset="">
+                    <img src="../static/assets/estacionamiento.png" alt="" srcset="">
                     <p>Parqueadero</p>
                 </div>
                 <div class="section-column">
-                    <img src="static/assets/plato.png" alt="" srcset="">
+                    <img src="../static/assets/plato.png" alt="" srcset="">
                     <p>Restaurante</p>
                 </div>
                 <div class="section-column">
-                    <img src="static/assets/piscina.png" alt="" srcset="">
+                    <img src="../static/assets/piscina.png" alt="" srcset="">
                     <p>Piscina</p>
                 </div>
                 <div class="section-column">
-                    <img src="static/assets/senal-wifi.png" alt="" srcset="">
+                    <img src="../static/assets/senal-wifi.png" alt="" srcset="">
                     <p>WiFi gratuito</p>
                 </div>
             </div>
         </div>
         <h1 style="text-align: center;">ACACIAS META - La perla Llanera</h1>
         <a href="https://www.youtube.com/watch?v=-WEADKAtS1A" target="_blank">
-            <img class="img-res" src="static/assets/screenshot-video.png" alt="" srcset="">
+            <img class="img-res" src="../static/assets/screenshot-video.png" alt="" srcset="">
         </a>
     </div>
     <footer>
         <div class="footer-columns">
             <div class="footer-column">
-                <img src="static/assets/sellos.png" width="50%" alt="" srcset="">
+                <img src="../static/assets/sellos.png" width="50%" alt="" srcset="">
             </div>
             <div class="footer-column">
                 <h3>Ubicación</h3>
@@ -162,7 +162,7 @@
             </div>
         </form>
     </dialog>
-    <script src="static/js/index.js"></script>
+    <script src="../static/js/index.js"></script>
 </body>
 
 </html>
