--- a/templates/reserva.html
+++ b/templates/reserva.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -317,7 +317,7 @@
     <footer>
         <div class="footer-columns">
             <div class="footer-column">
-                <img src="static/assets/sellos.png" width="50%" alt="" srcset="">
+                <img src="../static/assets/sellos.png" width="50%" alt="" srcset="">
             </div>
             <div class="footer-column">
                 <h3>Ubicación</h3>
@@ -355,7 +355,7 @@
             </div>
         </form>
     </dialog>
-    <script src="static/js/index.js"></script>
+    <script src="../static/js/index.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
