Buscador 1 agregado y función getHabitaciones modificada

--- a/templates/roomsearch.html
+++ b/templates/roomsearch.html
@@ -81,7 +81,8 @@
             <span>USD</span>
             <ion-icon name="chevron-forward-outline"></ion-icon>
         </div>
-        <select class="input-default" id="habitacion" name="habitacion" required>
+        <select class="input-default" id="habitacionSelect" name="habitacion" required>
+            <option value="" selected disabled>Seleccionar tipo</option>
             <option value="simple">Simple</option>
             <option value="doble">Doble</option>
             <option value="compartida">Compartida</option>
