--- a/static/css/style.css
+++ b/static/css/style.css
@@ -340,3 +340,34 @@ footer {
 .form input[type="text"], .form select, .form button {
   width: -webkit-fill-available;
 }
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+.active, .accordion:hover {
+  background-color: #ccc; 
+}
+.panel {
+  padding: 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+}
+.panel input {
+  display: block;
+  margin-bottom: 10px;
+}
+.panel label {
+  font-weight: bold;
+}
+#submit-btn {
+  margin-top: 10px;
+}
