Buscador 1 agregado y función getHabitaciones modificada

--- a/templates/roomsearch.html
+++ b/templates/roomsearch.html
@@ -82,10 +82,10 @@
             <ion-icon name="chevron-forward-outline"></ion-icon>
         </div>
         <select class="input-default" id="habitacionSelect" name="habitacion" required>
-            <option value="" selected disabled>Seleccionar tipo</option>
-            <option value="simple">Simple</option>
-            <option value="doble">Doble</option>
-            <option value="compartida">Compartida</option>
+            <option value="Seleccionar tipo" selected disabled>Seleccionar tipo</option>
+            <option value="Simple">Simple</option>
+            <option value="Doble">Doble</option>
+            <option value="Compartida">Compartida</option>
         </select>
     </div>
     <footer>
