Buscador 1 agregado y función getHabitaciones modificada

--- a/templates/roomsearch.html
+++ b/templates/roomsearch.html
@@ -75,7 +75,7 @@
             <button class="button-default w-100">Buscar</button>
         </div>
         <h1>Resultados de busqueda para su selección:</h1>
-        <p>opciones</p>
+        <p>Opciones</p>
         <div class="selector">
             <img src="static/assets/currency.svg" alt="" srcset="">
             <span>USD</span>
@@ -87,6 +87,7 @@
             <option value="Doble">Doble</option>
             <option value="Compartida">Compartida</option>
         </select>
+        <button class="button-default w-100" id="filter-button">Filtrar</button>
     </div>
     <footer>
         <div class="footer-columns">
