fixes y Seleccion de hab

--- a/templates/reserva.html
+++ b/templates/reserva.html
@@ -75,7 +75,7 @@
             <p id="ocp-mobile">1-0-0</p>
             <button class="button-default w-100">Buscar</button>
         </div>
-        <form action="#" class="form">
+        <form class="form">
             <div id="guests"></div>
             <br>
             <label>Servicios Adicionales:</label>
